Version: 1.3.0
Date: 27. 12. 2021
  Improvements:
    - Added mod setting to control evolution calculation accuracy
    - Added mod setting to control evolution per worm killed
  Tweaks:
    - Added some additional information around the console command /rampantEvolution
    - Increased frequency to every 2 minutes for stats grabbed from factorio engine for computing deltas

---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: 16. 4. 2021
  Improvements:
    - Added a minimum evolution setting based off of the peak evolution reached
  Tweaks:
    - Doubled processing speed with a slightly lower accuracy historical reconstruction of evolution
  Bugfixes:
    - Historical ticks not being included in recalculating evolution

---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 16. 4. 2021
  Improvements:
    - Optimized calculating evolution
    - Added a mod setting to allow for recalculating all evolution history with new mod settings values, will not be a perfect reconstruction of history (lossy).
    - Added mod settings for display evolution stats to console
    - Added time and pollution generated evolution options
    - Added console command /rampantEvolution to display a message to console
  Bugfixes:
    - Corrected asymptotic behavior of calculation by using counts instead of deltas allowing for counting everything separately
    - Fixed dying trees not being accounted for
  Tweaks:
    - Mod setting default reduced evolution from spawner pollution absorption by 65%
    - Mod setting default increased evolution reduction from trees absorbing pollution by 2x
    - Mod setting default increased evolution from trees being damaged by pollution by 58%
    - Mod setting default increased evolution from killing spawners by 10x
    - Mod setting default increased evolution reduction from killing hives by 10x